--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     },
     "dependencies": {
         "axios": "^0.24.0",
-        "vue": "^3.2.25"
+        "vue": "^3.2.25",
+        "vue-router": "^4.0.12"
     },
     "devDependencies": {
         "@vitejs/plugin-vue": "^2.0.0",
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "express": "^4.17.2",
+        "sass": "^1.45.1",
         "typescript": "^4.4.4",
         "vite": "^2.7.2",
         "vue-tsc": "^0.29.8"
