--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "vue-router": "^4.1.6"
     },
     "devDependencies": {
+        "@babel/types": "^7.21.2",
         "@vitejs/plugin-vue": "^4.0.0",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
